Parallel jobs are easy to use with run.sh now.
Should modify main code so that files would not be saved to working
directory soon.

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@
 *.root
 
 # Exec-files
-exec_dijet_*
+exec_toyFlow_*
 
 #Additional files:
 .*.swp
@@ -43,6 +43,7 @@ exec_dijet_*
 .*.swn
 *.vim
 orig/*
+outputs/*
 NBIcode/*
 nanoDict.cc
 nanoDict_rdict.pcm
